--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.json:json:20220924'
     implementation 'org.json:org.json:chargebee-1.0'
+    implementation 'mysql:mysql-connector-java:8.0.26'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 tasks.named('test') {
