--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.error.include-message=always
+server.error.include-exception=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ChemistryDB
+spring.datasource.username=root
+spring.datasource.password=JAVAlabs0987
